Change file/namespaces to reflect project name.

--- a/PierresOrders/Views/Home/Index.cshtml
+++ b/PierresOrders/Views/Home/Index.cshtml
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>ProjectName</title>
+    <title>Pierres Orders</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   </head>
   <body>
-    <h1>ProjectName</h1>
+    <h1>Welcome Peirre</h1>
     <ul>
       <li>ProjectName</li>
     </ul>
