Add link to vendors page

--- a/PierresOrders/Views/Home/Index.cshtml
+++ b/PierresOrders/Views/Home/Index.cshtml
@@ -7,8 +7,6 @@
   </head>
   <body>
     <h1>Welcome Peirre</h1>
-    <ul>
-      <li>ProjectName</li>
-    </ul>
+    <p><a href='/vendors'>Vendors</a></p>
   </body>
 </html>
