Add form for new orders

--- a/PierresOrders/Views/Order/New.cshtml
+++ b/PierresOrders/Views/Order/New.cshtml
@@ -4,15 +4,15 @@
 
 <h1>Add a <strong>new order</strong> to @Model.Name</h1>
 
-<form action="/vendors.@Model.Id/orders" method="post">
-  <input id="vendorId" name="vendorId" type="hidden" value="Model.Id">
+<form action="/vendors/@Model.Id/orders" method="post">
+  <input id="vendorId" name="vendorId" type="hidden" value="@Model.Id">
   <label for="orderTitle">Order Title</label>
-  <input id="orderTitle" name="OrderTitle" type="text">
+  <input id="orderTitle" name="orderTitle" type="text">
   <label for="orderDescription">Order description</label>
-  <input id="orderDescription" name="orderDescription" type="orderDescription" size="50">
+  <input id="orderDescription" name="orderDescription" type="text" size="50">
   <label for="orderPrice">Order Total: $</label>
   <input id="orderPrice" name="orderPrice" type="number">
   <label for="orderDate">Delivery Date:</label>
-  <input id="orderDate" name="orderDate" type="text" TextMode="Date">
+  <input id="orderDate" name="orderDate" type="text">
   <button type="submit">Create Order</button>
 </form>
