--- a/PierresOrders/Views/Home/Index.cshtml
+++ b/PierresOrders/Views/Home/Index.cshtml
@@ -1,6 +1,11 @@
 @{
   Layout = "_Layout";
 }
-    <h1>Welcome Peirre</h1>
-    <p><a href='/vendors'>Vendors</a></p>
+
+<div class='home__description'>
+  <p>Welcome to Pierre's Orders, the ordering site for Pierre's treats. On this site you can add vendors and record their orders.  Selecte Vendors to get started.</p>
+</div>
+<div class='nav__buttons'>
+    <a href='/vendors'><button class='btn btn-primary'>Vendors</button></a>
+</div>
  
